--- a/index.html
+++ b/index.html
@@ -3,8 +3,70 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header class="container">
+      <div class="container-header">
+        <img class="icon-menu" src="./assets/img/icons/hamburger.svg" alt="icon-menu-error" />
+        <img class="icon-logo" src="./assets/img/logo.svg" alt="" />
+      </div>
+      <div class="introduction-container">
+        <div class="introduction-position">
+          <h1 class="title-introduction">Scooter sharing made simple</h1>
+          <p class="text-introduction">
+            Scoot takes the hassle out of urban mobility. Our bikes are placed in convenient locations in each of our
+            cities. Use our app to locate the nearest bike, unlock it with a tap, and you’re away!
+          </p>
+          <a href="#" class="button-introduction">Get Scootin</a>
+        </div>
+        <img  class="arrow-left" src="./assets/img/patterns/right-arrow.svg" alt=""></img>
+      </div>
+      <nav>
+        <ul>
+          <li>
+            <a href=""></a>
+          </li>
+          <li>
+            <a href=""></a>
+          </li>
+          <li>
+            <a href=""></a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main-container">
+      <div>
+      <div class="locate-app">
+        <div class="logo-app"></div>
+        <h2 class="subtitle-feature">Locate with app</h2>
+        <span class="text-features">Use the app to find the nearest scooter to you. We are continuously placing scooters in the areas with most demand, so one should never be too far away. </span>
+      </div>
+      <div class="pick-scooter">
+        <div class="logo-scooter"></div>
+        <h2 class="subtitle-feature">Locate with app</h2>
+        <span class="text-features">Use the app to find the nearest scooter to you. We are continuously placing scooters in the areas with most demand, so one should never be too far away. </span>
+      </div>
+      <div class="enjoy-ride">
+        <div class="logo-ride"></div>
+        <h2 class="subtitle-feature">Locate with app</h2>
+        <span class="text-features">Use the app to find the nearest scooter to you. We are continuously placing scooters in the areas with most demand, so one should never be too far away. </span>
+      </div>
+    </div>
+      <div class="girl-phone"></div>
+      <div></div>
+    </main>
+    <script src="./js/scripts.js"></script>
+  </body>
 </html>
+<!-- https://developer.mozilla.org/en-US/docs/Web/CSS/filter-function/brightness -->
+
+<!-- ccordion - accordion item - accordion info, etc -->
