--- a/index.html
+++ b/index.html
@@ -15,54 +15,150 @@
   <body>
     <header class="container">
       <div class="container-header">
-        <img class="icon-menu" src="./assets/img/icons/hamburger.svg" alt="icon-menu-error" />
+        <img
+          id="icon-menu"
+          class="icon-menu"
+          src="./assets/img/icons/hamburger.svg"
+          alt="icon-menu-error"
+        />
         <img class="icon-logo" src="./assets/img/logo.svg" alt="" />
       </div>
       <div class="introduction-container">
         <div class="introduction-position">
           <h1 class="title-introduction">Scooter sharing made simple</h1>
           <p class="text-introduction">
-            Scoot takes the hassle out of urban mobility. Our bikes are placed in convenient locations in each of our
-            cities. Use our app to locate the nearest bike, unlock it with a tap, and you’re away!
+            Scoot takes the hassle out of urban mobility. Our bikes are placed
+            in convenient locations in each of our cities. Use our app to locate
+            the nearest bike, unlock it with a tap, and you’re away!
           </p>
           <a href="#" class="button-introduction">Get Scootin</a>
         </div>
-        <img  class="arrow-left" src="./assets/img/patterns/right-arrow.svg" alt=""></img>
+        <img
+          class="arrow-right"
+          src="./assets/img/patterns/right-arrow.svg"
+          alt=""
+        />
+        <img
+          class="white-circles"
+          src="./assets/img/patterns/white-circles.svg"
+          alt=""
+        />
+        <div class="hidden-line">
+          <img
+            class="line"
+            src="./assets/img/patterns/line.svg"
+            alt="error line"
+          />
+        </div>
+        <nav>
+          <ul id="menu" class="menu">
+            <div class="position-menu">
+              <li>
+                <a href="#" class="menu-color">About</a>
+              </li>
+              <li>
+                <a href="#" class="menu-color">location</a>
+              </li>
+              <li>
+                <a href="#" class="menu-color">Careers</a>
+              </li>
+            </div>
+            <li>
+              <a href="#" class="menu-color position-link">Get Scootin</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-      <nav>
-        <ul>
-          <li>
-            <a href=""></a>
-          </li>
-          <li>
-            <a href=""></a>
-          </li>
-          <li>
-            <a href=""></a>
-          </li>
-        </ul>
-      </nav>
     </header>
     <main class="main-container">
+      <div class="features">
+        <div class="locate-app">
+          <div class="logo-app"></div>
+          <div class="column-content">
+            <h2 class="subtitle-feature">Locate with app</h2>
+            <span class="text-features"
+              >Use the app to find the nearest scooter to you. We are
+              continuously placing scooters in the areas with most demand, so
+              one should never be too far away.
+            </span>
+          </div>
+        </div>
+        <div class="pick-scooter">
+          <div class="logo-scooter"></div>
+          <div class="column-content">
+            <h2 class="subtitle-feature">Pick your scooter</h2>
+            <span class="text-features"
+              >We show the most important info for the scooters closest to you.
+              So you know how much charge they have left and can see roughly how
+              much it will cost.
+            </span>
+          </div>
+        </div>
+        <div class="enjoy-ride">
+          <div class="logo-ride"></div>
+          <div class="column-content">
+            <h2 class="subtitle-feature">Enjoy the ride</h2>
+            <span class="text-features"
+              >Scan the QR code and the bike will unlock. Retract the cable
+              lock, put on a helmet, and you’re off! Always lock bikes away from
+              walkways and accessibility ramps.
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="line-white"></div>
+
       <div>
-      <div class="locate-app">
-        <div class="logo-app"></div>
-        <h2 class="subtitle-feature">Locate with app</h2>
-        <span class="text-features">Use the app to find the nearest scooter to you. We are continuously placing scooters in the areas with most demand, so one should never be too far away. </span>
+        <div class="information-photo-1">
+          <div class="girl-phone"></div>
+          <div class="information-arrow-1"></div>
+          <div class="big-circle"></div>
+        </div>
+        <div class="information-container-1">
+          <h2 class="information-subtitle">Easy to use riding telemetry</h2>
+          <span class="information-text"
+            >The Scoot app is available with riding telemetry. This means it can
+            show you your average speed, how long you've been using the scooter,
+            your traveling distance, and many more things all in an easy to use
+            app.</span
+          >
+          <a href="#" class="information-link">Learn More</a>
+        </div>
       </div>
-      <div class="pick-scooter">
-        <div class="logo-scooter"></div>
-        <h2 class="subtitle-feature">Locate with app</h2>
-        <span class="text-features">Use the app to find the nearest scooter to you. We are continuously placing scooters in the areas with most demand, so one should never be too far away. </span>
+
+      <div >
+        <div class="information-photo-2">
+          <div class="city"></div>
+          <div class="information-arrow-2"></div>
+        </div>
+        <div class="information-container-2">
+          <h2 class="information-subtitle">Coming to a city near you</h2>
+          <span class="information-text"
+            >Scoot is available in 4 major cities so far. We’re expanding
+            rapidly, so be sure to let us know if you want to see us in your
+            hometown. We’re aiming to let our scooters loose on 23 cities over
+            the coming year.</span
+          >
+          <a href="#" class="information-link">Learn More</a>
+        </div>
+   
+
+      <div >
+        <div class="information-photo-3">
+          <div class="wallet"></div>
+          <div class="information-arrow-3"></div>
+        </div>
+        <div class="information-container-3">
+          <h2 class="information-subtitle">Zero hassle payments</h2>
+          <span class="information-text"
+            >Our payment is as easy as one two three. We accept most credit
+            cards and debit cards. You can also link your PayPal account inside
+            the app. Need to pay later? No worries! You can defer payment for up
+            to a month.</span
+          >
+          <a href="#" class="information-link">Learn More</a>
+        </div>
       </div>
-      <div class="enjoy-ride">
-        <div class="logo-ride"></div>
-        <h2 class="subtitle-feature">Locate with app</h2>
-        <span class="text-features">Use the app to find the nearest scooter to you. We are continuously placing scooters in the areas with most demand, so one should never be too far away. </span>
-      </div>
-    </div>
-      <div class="girl-phone"></div>
-      <div></div>
     </main>
     <script src="./js/scripts.js"></script>
   </body>
