--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         <div class="pick-scooter">
           <div class="logo-scooter"></div>
-          <div class="column-content">
+          <div class="column-content column-content-change-1">
             <h2 class="subtitle-feature">Pick your scooter</h2>
             <span class="text-features"
               >We show the most important info for the scooters closest to you.
@@ -96,7 +96,7 @@
         </div>
         <div class="enjoy-ride">
           <div class="logo-ride"></div>
-          <div class="column-content">
+          <div class="column-content column-content-change-2">
             <h2 class="subtitle-feature">Enjoy the ride</h2>
             <span class="text-features"
               >Scan the QR code and the bike will unlock. Retract the cable
@@ -109,54 +109,58 @@
       <div class="line-white"></div>
 
       <div>
-        <div class="information-photo-1">
-          <div class="girl-phone"></div>
-          <div class="information-arrow-1"></div>
-          <div class="big-circle"></div>
+        <div class="container-information-desktop-1">
+          <div class="information-photo-1">
+            <div class="girl-phone"></div>
+            <div class="information-arrow-1"></div>
+            <div class="big-circle"></div>
+          </div>
+          <div class="information-container-1">
+            <h2 class="information-subtitle-1">Easy to use riding telemetry</h2>
+            <span class="information-text-1"
+              >The Scoot app is available with riding telemetry. This means it
+              can show you your average speed, how long you've been using the
+              scooter, your traveling distance, and many more things all in an
+              easy to use app.</span
+            >
+            <a href="#" class="information-link-1">Learn More</a>
+          </div>
         </div>
-        <div class="information-container-1">
-          <h2 class="information-subtitle">Easy to use riding telemetry</h2>
-          <span class="information-text"
-            >The Scoot app is available with riding telemetry. This means it can
-            show you your average speed, how long you've been using the scooter,
-            your traveling distance, and many more things all in an easy to use
-            app.</span
-          >
-          <a href="#" class="information-link">Learn More</a>
-        </div>
-      </div>
 
-      <div >
-        <div class="information-photo-2">
-          <div class="city"></div>
-          <div class="information-arrow-2"></div>
+        <div class="container-information-desktop-2">
+          <div class="information-photo-2">
+            <div class="city"></div>
+            <div class="information-arrow-2"></div>
+            <div class="big-circle circle-1"></div>
+          </div>
+          <div class="information-container-2">
+            <h2 class="information-subtitle-2">Coming to a city near you</h2>
+            <span class="information-text-2"
+              >Scoot is available in 4 major cities so far. We’re expanding
+              rapidly, so be sure to let us know if you want to see us in your
+              hometown. We’re aiming to let our scooters loose on 23 cities over
+              the coming year.</span
+            >
+            <a href="#" class="information-link-2">Learn More</a>
+          </div>
         </div>
-        <div class="information-container-2">
-          <h2 class="information-subtitle">Coming to a city near you</h2>
-          <span class="information-text"
-            >Scoot is available in 4 major cities so far. We’re expanding
-            rapidly, so be sure to let us know if you want to see us in your
-            hometown. We’re aiming to let our scooters loose on 23 cities over
-            the coming year.</span
-          >
-          <a href="#" class="information-link">Learn More</a>
-        </div>
-   
 
-      <div >
-        <div class="information-photo-3">
-          <div class="wallet"></div>
-          <div class="information-arrow-3"></div>
-        </div>
-        <div class="information-container-3">
-          <h2 class="information-subtitle">Zero hassle payments</h2>
-          <span class="information-text"
-            >Our payment is as easy as one two three. We accept most credit
-            cards and debit cards. You can also link your PayPal account inside
-            the app. Need to pay later? No worries! You can defer payment for up
-            to a month.</span
-          >
-          <a href="#" class="information-link">Learn More</a>
+        <div class="container-information-desktop-3">
+          <div class="information-photo-3">
+            <div class="wallet"></div>
+            <div class="information-arrow-3"></div>
+            <div class="big-circle circle-2"></div>
+          </div>
+          <div class="information-container-3">
+            <h2 class="information-subtitle-3">Zero hassle payments</h2>
+            <span class="information-text-3"
+              >Our payment is as easy as one two three. We accept most credit
+              cards and debit cards. You can also link your PayPal account
+              inside the app. Need to pay later? No worries! You can defer
+              payment for up to a month.</span
+            >
+            <a href="#" class="information-link-3">Learn More</a>
+          </div>
         </div>
       </div>
     </main>
