--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <ul id="menu" class="menu">
             <div class="position-menu">
               <li>
-                <a href="#" class="menu-color">About</a>
+                <a href="./html/about.html" class="menu-color">About</a>
               </li>
               <li>
                 <a href="#" class="menu-color">location</a>
