--- a/html/about.html
+++ b/html/about.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/style.css" />
-    <title>Document</title>
+    <title>About</title>
   </head>
   <body>
     <header class="container">
@@ -42,6 +42,9 @@
           </li>
         </ul>
       </nav>
+      <div class="header-img">
+        <h1 class="header-title">About</h1>
+      </div>
     </header>
     <script src="../js/scripts.js"></script>
   </body>
