--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <title>Scoot</title>
   </head>
   <body>
     <header class="container">
@@ -166,6 +166,58 @@
     </main>
     <script src="./js/scripts.js"></script>
   </body>
+  <footer>
+    <div class="footer-content">
+      <div class="flex-content">
+        <h2 class="footer-text">Sign up and Scoot off today</h2>
+        <div class="footer-available-app">
+          <img
+            class="app-store"
+            src="./assets/img/icons/app-store.svg"
+            alt="error app"
+          />
+          <img
+            class="google-play"
+            src="./assets/img/icons/google-play.svg"
+            alt=""
+          />
+        </div>
+      </div>
+      <img
+        class="footer-circle-1"
+        src="./assets/img/patterns/semi-circles.svg"
+        alt=""
+      />
+    </div>
+
+    <div class="networks">
+      <div class="networks-container">
+        <div class="footer-logo"></div>
+        <nav>
+          <ul class="footer-ul">
+            <li>
+              <a class="footer-color-font" href="./html/about.html">About</a>
+            </li>
+            <li>
+              <a class="footer-color-font" href="./html/locations.html"
+                >Location</a
+              >
+            </li>
+            <li>
+              <a class="footer-color-font" href="./html/careers.html"
+                >Careers</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <div class="flex-networks">
+          <div class="logo-networks-facebook"></div>
+          <div class="logo-networks-x"></div>
+          <div class="logo-networks-instagram"></div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </html>
 <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/filter-function/brightness -->
 
