--- a/html/about.html
+++ b/html/about.html
@@ -44,8 +44,83 @@
       </nav>
       <div class="header-img">
         <h1 class="header-title">About</h1>
+        <img
+          class="about-circles"
+          src="../assets/img/patterns/white-circles.svg"
+          alt="about-circles-error"
+        />
       </div>
     </header>
+    <main>
+      <div class="about-hidden">
+        <div class="about-img-1">
+          <div class="about-phone"></div>
+          <div class="about-arrow-right"></div>
+        </div>
+        <div class="about-container-text-1">
+          <h2 class="about-subtitle-1">Mobility for the digital era</h2>
+          <span class="about-text-1"
+            >Getting around should be simple (and even fun!) for everyone. We
+            embrace technology to provide low cost, smart access to scooters at
+            your fingertips.</span
+          >
+        </div>
+      </div>
+      <div class="about-white-circle"></div>
+    </main>
+
+    <footer>
+      <div class="footer-content">
+        <div class="flex-content">
+          <h2 class="footer-text">Sign up and Scoot off today</h2>
+          <div class="footer-available-app">
+            <img
+              class="app-store"
+              src="../assets/img/icons/app-store.svg"
+              alt="error app"
+            />
+            <img
+              class="google-play"
+              src="../assets/img/icons/google-play.svg"
+              alt=""
+            />
+          </div>
+        </div>
+        <img
+          class="footer-circle-1"
+          src="../assets/img/patterns/semi-circles.svg"
+          alt=""
+        />
+      </div>
+
+      <div class="networks">
+        <div class="networks-container">
+          <div class="footer-logo"></div>
+          <nav>
+            <ul class="footer-ul">
+              <li>
+                <a class="footer-color-font" href="../html/about.html">About</a>
+              </li>
+              <li>
+                <a class="footer-color-font" href="../html/locations.html"
+                  >Location</a
+                >
+              </li>
+              <li>
+                <a class="footer-color-font" href="../html/careers.html"
+                  >Careers</a
+                >
+              </li>
+            </ul>
+          </nav>
+          <div class="flex-networks">
+            <div class="logo-networks-facebook"></div>
+            <div class="logo-networks-x"></div>
+            <div class="logo-networks-instagram"></div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="../js/scripts.js"></script>
   </body>
 </html>
