about chang intro

--- a/html/about.html
+++ b/html/about.html
@@ -55,7 +55,8 @@
       <div class="about-hidden">
         <div class="about-img-1">
           <div class="about-phone"></div>
-          <div class="about-arrow-right"></div>
+          <div class="about-arrow-1"></div>
+          <div class="about-white-circle"></div>
         </div>
         <div class="about-container-text-1">
           <h2 class="about-subtitle-1">Mobility for the digital era</h2>
@@ -66,7 +67,21 @@
           >
         </div>
       </div>
-      <div class="about-white-circle"></div>
+      <div class="about-hidden-2">
+        <div class="about-img-2">
+          <div class="about-living"></div>
+          <div class="about-arrow-2"></div>
+          <div class="about-white-circle-2"></div>
+        </div>
+        <div class="about-container-text-2">
+          <h2 class="about-subtitle-2">Mobility for the digital era</h2>
+          <span class="about-text-2"
+            >Getting around should be simple (and even fun!) for everyone. We
+            embrace technology to provide low cost, smart access to scooters at
+            your fingertips.</span
+          >
+        </div>
+      </div>
     </main>
 
     <footer>
