--- a/html/about.html
+++ b/html/about.html
@@ -31,10 +31,10 @@
               <a href="../index.html" class="menu-color">About</a>
             </li>
             <li>
-              <a href="#" class="menu-color">location</a>
+              <a href="./locations.html" class="menu-color">location</a>
             </li>
             <li>
-              <a href="#" class="menu-color">Careers</a>
+              <a href="./careers.html" class="menu-color">Careers</a>
             </li>
           </div>
           <li>
