--- a/html/locations.html
+++ b/html/locations.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/style.css" />
-    <title>Document</title>
+    <title>About</title>
   </head>
   <body>
     <header class="container">
@@ -28,13 +28,13 @@
         <ul id="menu" class="menu">
           <div class="position-menu">
             <li>
-              <a href="../index.html" class="menu-color">About</a>
+              <a href="./about.html" class="menu-color">About</a>
             </li>
             <li>
               <a href="#" class="menu-color">location</a>
             </li>
             <li>
-              <a href="#" class="menu-color">Careers</a>
+              <a href="./careers.html" class="menu-color">Careers</a>
             </li>
           </div>
           <li>
@@ -42,10 +42,92 @@
           </li>
         </ul>
       </nav>
-      <div class="header-img">
-        <h1 class="header-title">About</h1>
+      <div class="location-img">
+        <h1 class="location-title">Locations</h1>
+        <img
+          class="location-circles"
+          src="../assets/img/patterns/white-circles.svg"
+          alt="about-circles-error"
+        />
       </div>
     </header>
-    <script src="../js/scripts.js"></script>
+    <main>
+      <div class="location-wolrd-map"></div>
+      <div class="location-country">
+        <div class="location-box">
+          <h2 class="location-text-country">New york</h2>
+        </div>
+        <div class="location-box">
+          <h2 class="location-text-country">London</h2>
+        </div>
+        <div class="location-box">
+          <h2 class="location-text-country">Jakarta</h2>
+        </div>
+        <div class="location-box">
+          <h2 class="location-text-country">Yokohama</h2>
+        </div>
+      </div>
+
+      <div class="location-box-final">
+        <h2 class="location-title-final">Your City Not Listed?</h2>
+        <p class="location-text-final">
+          If you’d like to see Scoot in your hometown, be sure to let us know.
+          We track requests and plan launches based on demand. Feel free to
+          message us by clicking the link or messaging us on social.
+        </p>
+        <p class="location-button-message">Message Us</p>
+      </div>
+    </main>
+
+    <footer>
+      <div class="footer-content">
+        <div class="flex-content">
+          <h2 class="footer-text">Sign up and Scoot off today</h2>
+          <div class="footer-available-app">
+            <img
+              class="app-store"
+              src="../assets/img/icons/app-store.svg"
+              alt="error app"
+            />
+            <img
+              class="google-play"
+              src="../assets/img/icons/google-play.svg"
+              alt=""
+            />
+          </div>
+        </div>
+        <img
+          class="footer-circle-1"
+          src=".../assets/img/patterns/semi-circles.svg"
+          alt=""
+        />
+      </div>
+
+      <div class="networks">
+        <div class="networks-container">
+          <div class="footer-logo"></div>
+          <nav>
+            <ul class="footer-ul">
+              <li>
+                <a class="footer-color-font" href="./about.html">About</a>
+              </li>
+              <li>
+                <a class="footer-color-font" href="./html/locations.html"
+                  >Location</a
+                >
+              </li>
+              <li>
+                <a class="footer-color-font" href="./careers.html">Careers</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="flex-networks">
+            <div class="logo-networks-facebook"></div>
+            <div class="logo-networks-x"></div>
+            <div class="logo-networks-instagram"></div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
