--- a/html/careers.html
+++ b/html/careers.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/style.css" />
-    <title>Document</title>
+    <title>About</title>
   </head>
   <body>
     <header class="container">
@@ -28,13 +28,13 @@
         <ul id="menu" class="menu">
           <div class="position-menu">
             <li>
-              <a href="../index.html" class="menu-color">About</a>
+              <a href="./about.html" class="menu-color">About</a>
             </li>
             <li>
-              <a href="#" class="menu-color">location</a>
+              <a href="./locations.html" class="menu-color">location</a>
             </li>
             <li>
-              <a href="#" class="menu-color">Careers</a>
+              <a href="./careers.html" class="menu-color">Careers</a>
             </li>
           </div>
           <li>
@@ -42,10 +42,170 @@
           </li>
         </ul>
       </nav>
-      <div class="header-img">
-        <h1 class="header-title">About</h1>
+      <div class="careers-img">
+        <h1 class="careers-title">Careers</h1>
+        <img
+          class="careers-circles"
+          src="../assets/img/patterns/white-circles.svg"
+          alt="about-circles-error"
+        />
       </div>
     </header>
-    <script src="../js/scripts.js"></script>
+    <main>
+      <h2 class="values-subtitle-1">Why join us?</h2>
+      <div class="about-values">
+        <div class="container-our">
+          <div class="values-img-1">
+            <div class="values-tech"></div>
+            <span class="values-number-1">01</span>
+          </div>
+          <div class="values-container-text-1">
+            <h3 class="values-sub-subtitle-1">Our tech</h3>
+            <span class="values-text-1"
+              >We’re using cutting edge technology to drive accessible urban
+              transportation forward. Our fully electric scooters are a joy to
+              ride!</span
+            >
+          </div>
+        </div>
+
+        <div class="container-our">
+          <div class="values-img-2">
+            <div class="values-integrity"></div>
+            <span class="values-number-2">02</span>
+          </div>
+          <div class="values-container-text-2">
+            <h3 class="values-sub-subtitle-2">Our integrity</h3>
+            <span class="values-text-2"
+              >We are fully committed to deliver a great yet safe, sustainable
+              micro-mobility experience in every city we serve.</span
+            >
+          </div>
+        </div>
+
+        <div class="container-our">
+          <div class="values-img-3">
+            <div class="values-community"></div>
+            <span class="values-number-3">03</span>
+          </div>
+          <div class="values-container-text-3">
+            <h3 class="values-sub-subtitle-3">Our community</h3>
+            <span class="values-text-3"
+              >We support every community we serve. All workers are paid a
+              living wage based on their location and are Scoot employees.</span
+            >
+          </div>
+        </div>
+      </div>
+
+      <h2 class="faq-title">FAQs</h2>
+      <div id="faq-container" class="faq-container">
+        <h2 class="faq-works">How it works</h2>
+        <div class="faq-hidden">
+          <div class="faq-info">
+            <h2 class="faq-subtitle faq-subtitle-show">
+              How do I download the app?
+            </h2>
+            <p class="faq-text faq-text-show">
+              To download the Scoot app, you can search “Scoot” in both the App
+              and Google Play stores. An even simpler way to do it would be to
+              click the relevant link at the bottom of this page and you’ll be
+              re-directed to the correct page.
+            </p>
+          </div>
+          <img
+            id="icon-info"
+            src="../assets/img/icons/chevron.svg"
+            class="faq-arrow"
+            alt=""
+          />
+        </div>
+
+        <div class="faq-hidden">
+          <div class="faq-info">
+            <h2 class="faq-subtitle">Can I find a nearby Scoots?</h2>
+            <p class="faq-text">
+              Definitely! Simply open up the app and allow us to find your
+              location while using it. We'll show you all of the closest Scoots
+              and some extra useful information.
+            </p>
+          </div>
+          <img
+            id="icon-info"
+            src="../assets/img/icons/chevron.svg"
+            class="faq-arrow"
+            alt=""
+          />
+        </div>
+
+        <div class="faq-hidden">
+          <div class="faq-info">
+            <h2 class="faq-subtitle">Do I need a license to ride?</h2>
+            <p class="faq-text">
+              Yup! We provide information inside the app regarding local laws
+              and the license you need to be able to ride our Scoots. Safe
+              driving.
+            </p>
+          </div>
+          <img
+            id="icon-info"
+            src="../assets/img/icons/chevron.svg"
+            class="faq-arrow"
+            alt=""
+          />
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <div class="footer-content">
+        <div class="flex-content">
+          <h2 class="footer-text">Sign up and Scoot off today</h2>
+          <div class="footer-available-app">
+            <img
+              class="app-store"
+              src="../assets/img/icons/app-store.svg"
+              alt="error app"
+            />
+            <img
+              class="google-play"
+              src="../assets/img/icons/google-play.svg"
+              alt=""
+            />
+          </div>
+        </div>
+        <img
+          class="footer-circle-1"
+          src=".../assets/img/patterns/semi-circles.svg"
+          alt=""
+        />
+      </div>
+
+      <div class="networks">
+        <div class="networks-container">
+          <div class="footer-logo"></div>
+          <nav>
+            <ul class="footer-ul">
+              <li>
+                <a class="footer-color-font" href="./about.html">About</a>
+              </li>
+              <li>
+                <a class="footer-color-font" href="./locations.html"
+                  >Location</a
+                >
+              </li>
+              <li>
+                <a class="footer-color-font" href="./careers.html">Careers</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="flex-networks">
+            <div class="logo-networks-facebook"></div>
+            <div class="logo-networks-x"></div>
+            <div class="logo-networks-instagram"></div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
