--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                 <a href="./html/about.html" class="menu-color">About</a>
               </li>
               <li>
-                <a href="#" class="menu-color">location</a>
+                <a href="./html/locations.html" class="menu-color">location</a>
               </li>
               <li>
-                <a href="#" class="menu-color">Careers</a>
+                <a href="./html/careers.html" class="menu-color">Careers</a>
               </li>
             </div>
             <li>
