--- a/html/locations.html
+++ b/html/locations.html
@@ -31,7 +31,7 @@
               <a href="./about.html" class="menu-color">About</a>
             </li>
             <li>
-              <a href="#" class="menu-color">location</a>
+              <a href="#" class="menu-color">Location</a>
             </li>
             <li>
               <a href="./careers.html" class="menu-color">Careers</a>
