--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <a href="./html/about.html" class="menu-color">About</a>
               </li>
               <li>
-                <a href="./html/locations.html" class="menu-color">location</a>
+                <a href="./html/locations.html" class="menu-color">Location</a>
               </li>
               <li>
                 <a href="./html/careers.html" class="menu-color">Careers</a>
