--- a/html/about.html
+++ b/html/about.html
@@ -31,7 +31,7 @@
               <a href="../index.html" class="menu-color">About</a>
             </li>
             <li>
-              <a href="./locations.html" class="menu-color">location</a>
+              <a href="./locations.html" class="menu-color">Location</a>
             </li>
             <li>
               <a href="./careers.html" class="menu-color">Careers</a>
