--- a/index.html
+++ b/index.html
@@ -15,40 +15,22 @@
   <body>
     <header class="container">
       <div class="container-header">
-        <img
-          id="icon-menu"
-          class="icon-menu"
-          src="./assets/img/icons/hamburger.svg"
-          alt="icon-menu-error"
-        />
+        <img id="icon-menu" class="icon-menu" src="./assets/img/icons/hamburger.svg" alt="icon-menu-error" />
         <img class="icon-logo" src="./assets/img/logo.svg" alt="" />
       </div>
       <div class="introduction-container">
         <div class="introduction-position">
           <h1 class="title-introduction">Scooter sharing made simple</h1>
           <p class="text-introduction">
-            Scoot takes the hassle out of urban mobility. Our bikes are placed
-            in convenient locations in each of our cities. Use our app to locate
-            the nearest bike, unlock it with a tap, and you’re away!
+            Scoot takes the hassle out of urban mobility. Our bikes are placed in convenient locations in each of our
+            cities. Use our app to locate the nearest bike, unlock it with a tap, and you’re away!
           </p>
           <a href="#" class="button-introduction">Get Scootin</a>
         </div>
-        <img
-          class="arrow-right"
-          src="./assets/img/patterns/right-arrow.svg"
-          alt=""
-        />
-        <img
-          class="white-circles"
-          src="./assets/img/patterns/white-circles.svg"
-          alt=""
-        />
+        <img class="arrow-right" src="./assets/img/patterns/right-arrow.svg" alt="" />
+        <img class="white-circles" src="./assets/img/patterns/white-circles.svg" alt="" />
         <div class="hidden-line">
-          <img
-            class="line"
-            src="./assets/img/patterns/line.svg"
-            alt="error line"
-          />
+          <img class="line" src="./assets/img/patterns/line.svg" alt="error line" />
         </div>
         <nav>
           <ul id="menu" class="menu">
@@ -77,9 +59,8 @@
           <div class="column-content">
             <h2 class="subtitle-feature">Locate with app</h2>
             <span class="text-features"
-              >Use the app to find the nearest scooter to you. We are
-              continuously placing scooters in the areas with most demand, so
-              one should never be too far away.
+              >Use the app to find the nearest scooter to you. We are continuously placing scooters in the areas with
+              most demand, so one should never be too far away.
             </span>
           </div>
         </div>
@@ -88,9 +69,8 @@
           <div class="column-content column-content-change-1">
             <h2 class="subtitle-feature">Pick your scooter</h2>
             <span class="text-features"
-              >We show the most important info for the scooters closest to you.
-              So you know how much charge they have left and can see roughly how
-              much it will cost.
+              >We show the most important info for the scooters closest to you. So you know how much charge they have
+              left and can see roughly how much it will cost.
             </span>
           </div>
         </div>
@@ -99,9 +79,8 @@
           <div class="column-content column-content-change-2">
             <h2 class="subtitle-feature">Enjoy the ride</h2>
             <span class="text-features"
-              >Scan the QR code and the bike will unlock. Retract the cable
-              lock, put on a helmet, and you’re off! Always lock bikes away from
-              walkways and accessibility ramps.
+              >Scan the QR code and the bike will unlock. Retract the cable lock, put on a helmet, and you’re off!
+              Always lock bikes away from walkways and accessibility ramps.
             </span>
           </div>
         </div>
@@ -118,10 +97,9 @@
           <div class="information-container-1">
             <h2 class="information-subtitle-1">Easy to use riding telemetry</h2>
             <span class="information-text-1"
-              >The Scoot app is available with riding telemetry. This means it
-              can show you your average speed, how long you've been using the
-              scooter, your traveling distance, and many more things all in an
-              easy to use app.</span
+              >The Scoot app is available with riding telemetry. This means it can show you your average speed, how long
+              you've been using the scooter, your traveling distance, and many more things all in an easy to use
+              app.</span
             >
             <a href="#" class="information-link-1">Learn More</a>
           </div>
@@ -136,10 +114,9 @@
           <div class="information-container-2">
             <h2 class="information-subtitle-2">Coming to a city near you</h2>
             <span class="information-text-2"
-              >Scoot is available in 4 major cities so far. We’re expanding
-              rapidly, so be sure to let us know if you want to see us in your
-              hometown. We’re aiming to let our scooters loose on 23 cities over
-              the coming year.</span
+              >Scoot is available in 4 major cities so far. We’re expanding rapidly, so be sure to let us know if you
+              want to see us in your hometown. We’re aiming to let our scooters loose on 23 cities over the coming
+              year.</span
             >
             <a href="#" class="information-link-2">Learn More</a>
           </div>
@@ -154,10 +131,9 @@
           <div class="information-container-3">
             <h2 class="information-subtitle-3">Zero hassle payments</h2>
             <span class="information-text-3"
-              >Our payment is as easy as one two three. We accept most credit
-              cards and debit cards. You can also link your PayPal account
-              inside the app. Need to pay later? No worries! You can defer
-              payment for up to a month.</span
+              >Our payment is as easy as one two three. We accept most credit cards and debit cards. You can also link
+              your PayPal account inside the app. Need to pay later? No worries! You can defer payment for up to a
+              month.</span
             >
             <a href="#" class="information-link-3">Learn More</a>
           </div>
@@ -170,23 +146,11 @@
         <div class="flex-content">
           <h2 class="footer-text">Sign up and Scoot off today</h2>
           <div class="footer-available-app">
-            <img
-              class="app-store"
-              src="./assets/img/icons/app-store.svg"
-              alt="error app"
-            />
-            <img
-              class="google-play"
-              src="./assets/img/icons/google-play.svg"
-              alt=""
-            />
+            <img class="app-store" src="./assets/img/icons/app-store.svg" alt="error app" />
+            <img class="google-play" src="./assets/img/icons/google-play.svg" alt="" />
           </div>
         </div>
-        <img
-          class="footer-circle-1"
-          src="./assets/img/patterns/semi-circles.svg"
-          alt=""
-        />
+        <img class="footer-circle-1" src="./assets/img/patterns/semi-circles.svg" alt="" />
       </div>
 
       <div class="networks">
@@ -198,14 +162,10 @@
                 <a class="footer-color-font" href="./html/about.html">About</a>
               </li>
               <li>
-                <a class="footer-color-font" href="./html/locations.html"
-                  >Location</a
-                >
+                <a class="footer-color-font" href="./html/locations.html">Location</a>
               </li>
               <li>
-                <a class="footer-color-font" href="./html/careers.html"
-                  >Careers</a
-                >
+                <a class="footer-color-font" href="./html/careers.html">Careers</a>
               </li>
             </ul>
           </nav>
