--- a/html/careers.html
+++ b/html/careers.html
@@ -15,7 +15,12 @@
   <body>
     <header class="container">
       <div class="container-header">
-        <img id="icon-menu" class="icon-menu" src="../assets/img/icons/hamburger.svg" alt="icon-menu-error" />
+        <img
+          id="icon-menu"
+          class="icon-menu"
+          src="../assets/img/icons/hamburger.svg"
+          alt="icon-menu-error"
+        />
         <img class="icon-logo" src="../assets/img/logo.svg" alt="" />
       </div>
 
@@ -39,12 +44,33 @@
       </nav>
       <div class="careers-img">
         <h1 class="careers-title">Careers</h1>
-        <img class="careers-circles" src="../assets/img/patterns/white-circles.svg" alt="about-circles-error" />
+        <img
+          class="careers-circles"
+          src="../assets/img/patterns/white-circles.svg"
+          alt="about-circles-error"
+        />
       </div>
     </header>
+
     <main>
-      <div class="careers-container">
-        <img class="careers-join" src="../assets/img/images/join-us.jpg" alt="error join" />
+      <div class="careers-position-desktop">
+        <div class="careers-container">
+          <img
+            class="careers-join"
+            src="../assets/img/images/join-us.jpg"
+            alt="error join"
+          />
+        </div>
+        <div class="careers-container-join">
+          <h2 class="careers-join-subtitle">Care to join our mission?</h2>
+          <span class="careers-join-text"
+            >We’re always looking for ambitious individuals to help us on our
+            journey. If you’re passionate about our mission to provide clean,
+            accessible transport to improve urban living we want to hear from
+            you!</span
+          >
+          <a class="careers-button-hello" href="#">Say Hello</a>
+        </div>
       </div>
 
       <h2 class="values-subtitle-1">Why join us?</h2>
@@ -57,8 +83,9 @@
           <div class="values-container-text-1">
             <h3 class="values-sub-subtitle-1">Our tech</h3>
             <span class="values-text-1"
-              >We’re using cutting edge technology to drive accessible urban transportation forward. Our fully electric
-              scooters are a joy to ride!</span
+              >We’re using cutting edge technology to drive accessible urban
+              transportation forward. Our fully electric scooters are a joy to
+              ride!</span
             >
           </div>
         </div>
@@ -71,8 +98,8 @@
           <div class="values-container-text-2">
             <h3 class="values-sub-subtitle-2">Our integrity</h3>
             <span class="values-text-2"
-              >We are fully committed to deliver a great yet safe, sustainable micro-mobility experience in every city
-              we serve.</span
+              >We are fully committed to deliver a great yet safe, sustainable
+              micro-mobility experience in every city we serve.</span
             >
           </div>
         </div>
@@ -85,8 +112,8 @@
           <div class="values-container-text-3">
             <h3 class="values-sub-subtitle-3">Our community</h3>
             <span class="values-text-3"
-              >We support every community we serve. All workers are paid a living wage based on their location and are
-              Scoot employees.</span
+              >We support every community we serve. All workers are paid a
+              living wage based on their location and are Scoot employees.</span
             >
           </div>
         </div>
@@ -97,36 +124,56 @@
         <h2 class="faq-works">How it works</h2>
         <div class="faq-hidden">
           <div class="faq-info">
-            <h2 class="faq-subtitle faq-subtitle-show">How do I download the app?</h2>
+            <h2 class="faq-subtitle faq-subtitle-show">
+              How do I download the app?
+            </h2>
             <p class="faq-text faq-text-show">
-              To download the Scoot app, you can search “Scoot” in both the App and Google Play stores. An even simpler
-              way to do it would be to click the relevant link at the bottom of this page and you’ll be re-directed to
-              the correct page.
+              To download the Scoot app, you can search “Scoot” in both the App
+              and Google Play stores. An even simpler way to do it would be to
+              click the relevant link at the bottom of this page and you’ll be
+              re-directed to the correct page.
             </p>
           </div>
-          <img id="icon-info" src="../assets/img/icons/chevron.svg" class="faq-arrow" alt="" />
+          <img
+            id="icon-info"
+            src="../assets/img/icons/chevron.svg"
+            class="faq-arrow"
+            alt=""
+          />
         </div>
 
         <div class="faq-hidden">
           <div class="faq-info">
             <h2 class="faq-subtitle">Can I find a nearby Scoots?</h2>
             <p class="faq-text">
-              Definitely! Simply open up the app and allow us to find your location while using it. We'll show you all
-              of the closest Scoots and some extra useful information.
+              Definitely! Simply open up the app and allow us to find your
+              location while using it. We'll show you all of the closest Scoots
+              and some extra useful information.
             </p>
           </div>
-          <img id="icon-info" src="../assets/img/icons/chevron.svg" class="faq-arrow" alt="" />
+          <img
+            id="icon-info"
+            src="../assets/img/icons/chevron.svg"
+            class="faq-arrow"
+            alt=""
+          />
         </div>
 
         <div class="faq-hidden">
           <div class="faq-info">
             <h2 class="faq-subtitle">Do I need a license to ride?</h2>
             <p class="faq-text">
-              Yup! We provide information inside the app regarding local laws and the license you need to be able to
-              ride our Scoots. Safe driving.
+              Yup! We provide information inside the app regarding local laws
+              and the license you need to be able to ride our Scoots. Safe
+              driving.
             </p>
           </div>
-          <img id="icon-info" src="../assets/img/icons/chevron.svg" class="faq-arrow" alt="" />
+          <img
+            id="icon-info"
+            src="../assets/img/icons/chevron.svg"
+            class="faq-arrow"
+            alt=""
+          />
         </div>
       </div>
     </main>
@@ -136,11 +183,23 @@
         <div class="flex-content">
           <h2 class="footer-text">Sign up and Scoot off today</h2>
           <div class="footer-available-app">
-            <img class="app-store" src="../assets/img/icons/app-store.svg" alt="error app" />
-            <img class="google-play" src="../assets/img/icons/google-play.svg" alt="" />
+            <img
+              class="app-store"
+              src="../assets/img/icons/app-store.svg"
+              alt="error app"
+            />
+            <img
+              class="google-play"
+              src="../assets/img/icons/google-play.svg"
+              alt=""
+            />
           </div>
         </div>
-        <img class="footer-circle-1" src=".../assets/img/patterns/semi-circles.svg" alt="" />
+        <img
+          class="footer-circle-1"
+          src=".../assets/img/patterns/semi-circles.svg"
+          alt=""
+        />
       </div>
 
       <div class="networks">
@@ -152,7 +211,9 @@
                 <a class="footer-color-font" href="./about.html">About</a>
               </li>
               <li>
-                <a class="footer-color-font" href="./locations.html">Location</a>
+                <a class="footer-color-font" href="./locations.html"
+                  >Location</a
+                >
               </li>
               <li>
                 <a class="footer-color-font" href="./careers.html">Careers</a>
