--- a/html/about.html
+++ b/html/about.html
@@ -131,59 +131,125 @@
 
       <h2 class="faq-title">FAQs</h2>
       <div id="faq-container" class="faq-container">
-        <h2 class="faq-works">How it works</h2>
-        <div class="faq-hidden">
-          <div class="faq-info">
-            <h2 class="faq-subtitle faq-subtitle-show">
-              How do I download the app?
-            </h2>
-            <p class="faq-text faq-text-show">
-              To download the Scoot app, you can search “Scoot” in both the App
-              and Google Play stores. An even simpler way to do it would be to
-              click the relevant link at the bottom of this page and you’ll be
-              re-directed to the correct page.
-            </p>
+        <div class="faq-flex">
+          <h2 class="faq-works">How it works</h2>
+          <div class="faq-column">
+            <div class="faq-hidden">
+              <div class="faq-info">
+                <h2 class="faq-subtitle faq-subtitle-show">
+                  How do I download the app?
+                </h2>
+                <p class="faq-text faq-text-show">
+                  To download the Scoot app, you can search “Scoot” in both the
+                  App and Google Play stores. An even simpler way to do it would
+                  be to click the relevant link at the bottom of this page and
+                  you’ll be re-directed to the correct page.
+                </p>
+              </div>
+              <img
+                id="icon-info"
+                src="../assets/img/icons/chevron.svg"
+                class="faq-arrow"
+                alt=""
+              />
+            </div>
+
+            <div class="faq-hidden">
+              <div class="faq-info">
+                <h2 class="faq-subtitle">Can I find a nearby Scoots?</h2>
+                <p class="faq-text">
+                  Definitely! Simply open up the app and allow us to find your
+                  location while using it. We'll show you all of the closest
+                  Scoots and some extra useful information.
+                </p>
+              </div>
+              <img
+                id="icon-info"
+                src="../assets/img/icons/chevron.svg"
+                class="faq-arrow"
+                alt=""
+              />
+            </div>
+
+            <div class="faq-hidden faq-hidden-final">
+              <div class="faq-info">
+                <h2 class="faq-subtitle">Do I need a license to ride?</h2>
+                <p class="faq-text">
+                  Yup! We provide information inside the app regarding local
+                  laws and the license you need to be able to ride our Scoots.
+                  Safe driving.
+                </p>
+              </div>
+              <img
+                id="icon-info"
+                src="../assets/img/icons/chevron.svg"
+                class="faq-arrow"
+                alt=""
+              />
+            </div>
           </div>
-          <img
-            id="icon-info"
-            src="../assets/img/icons/chevron.svg"
-            class="faq-arrow"
-            alt=""
-          />
         </div>
 
-        <div class="faq-hidden">
-          <div class="faq-info">
-            <h2 class="faq-subtitle">Can I find a nearby Scoots?</h2>
-            <p class="faq-text">
-              Definitely! Simply open up the app and allow us to find your
-              location while using it. We'll show you all of the closest Scoots
-              and some extra useful information.
-            </p>
-          </div>
-          <img
-            id="icon-info"
-            src="../assets/img/icons/chevron.svg"
-            class="faq-arrow"
-            alt=""
-          />
-        </div>
+        <!--  -->
+        <div class="faq-flex">
+          <h2 class="faq-works">Safe driving</h2>
+          <div class="faq-column">
+            <div class="faq-hidden">
+              <div class="faq-info">
+                <h2 class="faq-subtitle faq-subtitle-show">
+                  Should I wear a helmet?
+                </h2>
+                <p class="faq-text faq-text-show">
+                  Yes, please do! All cities have different laws. But we
+                  strongly strongly strongly recommend always wearing a helmet
+                  regardless of the local laws. We like you and we want you to
+                  be as safe as possible while Scooting.
+                </p>
+              </div>
+              <img
+                id="icon-info"
+                src="../assets/img/icons/chevron.svg"
+                class="faq-arrow"
+                alt=""
+              />
+            </div>
 
-        <div class="faq-hidden">
-          <div class="faq-info">
-            <h2 class="faq-subtitle">Do I need a license to ride?</h2>
-            <p class="faq-text">
-              Yup! We provide information inside the app regarding local laws
-              and the license you need to be able to ride our Scoots. Safe
-              driving.
-            </p>
+            <div class="faq-hidden">
+              <div class="faq-info">
+                <h2 class="faq-subtitle">How about the rules & regulations?</h2>
+                <p class="faq-text">
+                  Now is not the time to be a rule breaker. Be sure you're
+                  complying with all local laws and regulations. Also, just be a
+                  good human being. Be sure not to park your Scoot where it can
+                  block access to buildings or get in people's way.
+                </p>
+              </div>
+              <img
+                id="icon-info"
+                src="../assets/img/icons/chevron.svg"
+                class="faq-arrow"
+                alt=""
+              />
+            </div>
+
+            <div class="faq-hidden faq-hidden-final">
+              <div class="faq-info">
+                <h2 class="faq-subtitle">What if I damage my Scoot?</h2>
+                <p class="faq-text">
+                  Be sure to read our terms and conditions carefully. Not the
+                  most fun job we know but we make it as clear as possible.
+                  There's an option to add insurance for each trip, or you can
+                  sign up for annual insurance if you're a regular Scooter
+                </p>
+              </div>
+              <img
+                id="icon-info"
+                src="../assets/img/icons/chevron.svg"
+                class="faq-arrow"
+                alt=""
+              />
+            </div>
           </div>
-          <img
-            id="icon-info"
-            src="../assets/img/icons/chevron.svg"
-            class="faq-arrow"
-            alt=""
-          />
         </div>
       </div>
     </main>
