--- a/html/about.html
+++ b/html/about.html
@@ -28,13 +28,22 @@
         <ul id="menu" class="menu">
           <div class="position-menu">
             <li>
-              <a href="../index.html" class="menu-color">About</a>
+              <a class="hover-desktop" href="../index.html" class="menu-color"
+                >About</a
+              >
             </li>
             <li>
-              <a href="./locations.html" class="menu-color">Location</a>
+              <a
+                class="hover-desktop"
+                href="./locations.html"
+                class="menu-color"
+                >Location</a
+              >
             </li>
             <li>
-              <a href="./careers.html" class="menu-color">Careers</a>
+              <a class="hover-desktop" href="./careers.html" class="menu-color"
+                >Careers</a
+              >
             </li>
           </div>
           <li>
@@ -130,29 +139,27 @@
       </div>
 
       <h2 class="faq-title">FAQs</h2>
-      <div id="faq-container" class="faq-container">
+      <div id="faq-hidden" class="faq-container">
         <div class="faq-flex">
           <h2 class="faq-works">How it works</h2>
           <div class="faq-column">
-            <div class="faq-hidden">
+            <div class="faq-hidden faq-hidden-margin">
               <div class="faq-info">
-                <h2 class="faq-subtitle faq-subtitle-show">
-                  How do I download the app?
-                </h2>
-                <p class="faq-text faq-text-show">
+                <h2 class="faq-subtitle">How do I download the app?</h2>
+                <p class="faq-text">
                   To download the Scoot app, you can search “Scoot” in both the
                   App and Google Play stores. An even simpler way to do it would
                   be to click the relevant link at the bottom of this page and
                   you’ll be re-directed to the correct page.
                 </p>
               </div>
-              <img
-                id="icon-info"
-                src="../assets/img/icons/chevron.svg"
-                class="faq-arrow"
-                alt=""
-              />
             </div>
+            <img
+              id="icon-info"
+              src="../assets/img/icons/chevron.svg"
+              class="faq-arrow"
+              alt=""
+            />
 
             <div class="faq-hidden">
               <div class="faq-info">
@@ -163,13 +170,13 @@
                   Scoots and some extra useful information.
                 </p>
               </div>
-              <img
-                id="icon-info"
-                src="../assets/img/icons/chevron.svg"
-                class="faq-arrow"
-                alt=""
-              />
             </div>
+            <img
+              id="icon-info"
+              src="../assets/img/icons/chevron.svg"
+              class="faq-arrow"
+              alt=""
+            />
 
             <div class="faq-hidden faq-hidden-final">
               <div class="faq-info">
@@ -180,13 +187,13 @@
                   Safe driving.
                 </p>
               </div>
-              <img
-                id="icon-info"
-                src="../assets/img/icons/chevron.svg"
-                class="faq-arrow"
-                alt=""
-              />
             </div>
+            <img
+              id="icon-info"
+              src="../assets/img/icons/chevron.svg"
+              class="faq-arrow"
+              alt=""
+            />
           </div>
         </div>
 
@@ -194,7 +201,7 @@
         <div class="faq-flex">
           <h2 class="faq-works">Safe driving</h2>
           <div class="faq-column">
-            <div class="faq-hidden">
+            <div class="faq-hidden faq-hidden-margin">
               <div class="faq-info">
                 <h2 class="faq-subtitle faq-subtitle-show">
                   Should I wear a helmet?
@@ -206,13 +213,13 @@
                   be as safe as possible while Scooting.
                 </p>
               </div>
-              <img
-                id="icon-info"
-                src="../assets/img/icons/chevron.svg"
-                class="faq-arrow"
-                alt=""
-              />
             </div>
+            <img
+              id="icon-info"
+              src="../assets/img/icons/chevron.svg"
+              class="faq-arrow"
+              alt=""
+            />
 
             <div class="faq-hidden">
               <div class="faq-info">
@@ -224,13 +231,13 @@
                   block access to buildings or get in people's way.
                 </p>
               </div>
-              <img
-                id="icon-info"
-                src="../assets/img/icons/chevron.svg"
-                class="faq-arrow"
-                alt=""
-              />
             </div>
+            <img
+              id="icon-info"
+              src="../assets/img/icons/chevron.svg"
+              class="faq-arrow"
+              alt=""
+            />
 
             <div class="faq-hidden faq-hidden-final">
               <div class="faq-info">
@@ -242,13 +249,13 @@
                   sign up for annual insurance if you're a regular Scooter
                 </p>
               </div>
-              <img
-                id="icon-info"
-                src="../assets/img/icons/chevron.svg"
-                class="faq-arrow"
-                alt=""
-              />
             </div>
+            <img
+              id="icon-info"
+              src="../assets/img/icons/chevron.svg"
+              class="faq-arrow"
+              alt=""
+            />
           </div>
         </div>
       </div>
