--- a/html/locations.html
+++ b/html/locations.html
@@ -15,7 +15,12 @@
   <body>
     <header class="container">
       <div class="container-header">
-        <img id="icon-menu" class="icon-menu" src="../assets/img/icons/hamburger.svg" alt="icon-menu-error" />
+        <img
+          id="icon-menu"
+          class="icon-menu"
+          src="../assets/img/icons/hamburger.svg"
+          alt="icon-menu-error"
+        />
         <img class="icon-logo" src="../assets/img/logo.svg" alt="" />
       </div>
 
@@ -23,13 +28,20 @@
         <ul id="menu" class="menu">
           <div class="position-menu">
             <li>
-              <a href="./about.html" class="menu-color">About</a>
+              <a
+                class="hover-desktop color-white"
+                href="./about.html"
+                class="menu-color"
+                >About</a
+              >
             </li>
             <li>
-              <a href="#" class="menu-color">Location</a>
+              <a class="hover-desktop" href="#" class="menu-color">Location</a>
             </li>
             <li>
-              <a href="./careers.html" class="menu-color">Careers</a>
+              <a class="hover-desktop" href="./careers.html" class="menu-color"
+                >Careers</a
+              >
             </li>
           </div>
           <li>
@@ -39,7 +51,11 @@
       </nav>
       <div class="location-img">
         <h1 class="location-title">Locations</h1>
-        <img class="location-circles" src="../assets/img/patterns/white-circles.svg" alt="about-circles-error" />
+        <img
+          class="location-circles"
+          src="../assets/img/patterns/white-circles.svg"
+          alt="about-circles-error"
+        />
       </div>
     </header>
     <main>
@@ -62,8 +78,9 @@
       <div class="location-box-final">
         <h2 class="location-title-final">Your City Not Listed?</h2>
         <p class="location-text-final">
-          If you’d like to see Scoot in your hometown, be sure to let us know. We track requests and plan launches based
-          on demand. Feel free to message us by clicking the link or messaging us on social.
+          If you’d like to see Scoot in your hometown, be sure to let us know.
+          We track requests and plan launches based on demand. Feel free to
+          message us by clicking the link or messaging us on social.
         </p>
         <p class="location-button-message">Message Us</p>
       </div>
@@ -79,11 +96,23 @@
         <div class="flex-content">
           <h2 class="footer-text">Sign up and Scoot off today</h2>
           <div class="footer-available-app">
-            <img class="app-store" src="../assets/img/icons/app-store.svg" alt="error app" />
-            <img class="google-play" src="../assets/img/icons/google-play.svg" alt="" />
+            <img
+              class="app-store"
+              src="../assets/img/icons/app-store.svg"
+              alt="error app"
+            />
+            <img
+              class="google-play"
+              src="../assets/img/icons/google-play.svg"
+              alt=""
+            />
           </div>
         </div>
-        <img class="footer-circle-1" src=".../assets/img/patterns/semi-circles.svg" alt="" />
+        <img
+          class="footer-circle-1"
+          src=".../assets/img/patterns/semi-circles.svg"
+          alt=""
+        />
       </div>
 
       <div class="networks">
@@ -95,7 +124,9 @@
                 <a class="footer-color-font" href="./about.html">About</a>
               </li>
               <li>
-                <a class="footer-color-font" href="./html/locations.html">Location</a>
+                <a class="footer-color-font" href="./html/locations.html"
+                  >Location</a
+                >
               </li>
               <li>
                 <a class="footer-color-font" href="./careers.html">Careers</a>
