--- a/html/careers.html
+++ b/html/careers.html
@@ -28,13 +28,22 @@
         <ul id="menu" class="menu">
           <div class="position-menu">
             <li>
-              <a href="./about.html" class="menu-color">About</a>
+              <a class="hover-desktop" href="./about.html" class="menu-color"
+                >About</a
+              >
             </li>
             <li>
-              <a href="./locations.html" class="menu-color">Location</a>
+              <a
+                class="hover-desktop"
+                href="./locations.html"
+                class="menu-color"
+                >Location</a
+              >
             </li>
             <li>
-              <a href="./careers.html" class="menu-color">Careers</a>
+              <a class="hover-desktop" href="./careers.html" class="menu-color"
+                >Careers</a
+              >
             </li>
           </div>
           <li>
@@ -119,62 +128,52 @@
         </div>
       </div>
 
-      <h2 class="faq-title">FAQs</h2>
-      <div id="faq-container" class="faq-container">
-        <h2 class="faq-works">How it works</h2>
-        <div class="faq-hidden">
-          <div class="faq-info">
-            <h2 class="faq-subtitle faq-subtitle-show">
-              How do I download the app?
-            </h2>
-            <p class="faq-text faq-text-show">
-              To download the Scoot app, you can search “Scoot” in both the App
-              and Google Play stores. An even simpler way to do it would be to
-              click the relevant link at the bottom of this page and you’ll be
-              re-directed to the correct page.
-            </p>
-          </div>
-          <img
-            id="icon-info"
-            src="../assets/img/icons/chevron.svg"
-            class="faq-arrow"
-            alt=""
-          />
+      <div class="apply-color">
+        <div class="apply-column">
+          <h2 class="apply-title">General Manager</h2>
+          <span class="apply-country">Jakarta, Indonesia</span>
         </div>
+        <a class="apply-job" href="#">Apply</a>
+      </div>
 
-        <div class="faq-hidden">
-          <div class="faq-info">
-            <h2 class="faq-subtitle">Can I find a nearby Scoots?</h2>
-            <p class="faq-text">
-              Definitely! Simply open up the app and allow us to find your
-              location while using it. We'll show you all of the closest Scoots
-              and some extra useful information.
-            </p>
-          </div>
-          <img
-            id="icon-info"
-            src="../assets/img/icons/chevron.svg"
-            class="faq-arrow"
-            alt=""
-          />
+      <div class="apply-color apply-color-margin">
+        <div class="apply-column">
+          <h2 class="apply-title">UI/UX Designer</h2>
+          <span class="apply-country">Yokohama, Japan</span>
         </div>
+        <a class="apply-job" href="#">Apply</a>
+      </div>
 
-        <div class="faq-hidden">
-          <div class="faq-info">
-            <h2 class="faq-subtitle">Do I need a license to ride?</h2>
-            <p class="faq-text">
-              Yup! We provide information inside the app regarding local laws
-              and the license you need to be able to ride our Scoots. Safe
-              driving.
-            </p>
-          </div>
-          <img
-            id="icon-info"
-            src="../assets/img/icons/chevron.svg"
-            class="faq-arrow"
-            alt=""
-          />
+      <div class="apply-color apply-color-margin">
+        <div class="apply-column">
+          <h2 class="apply-title">Blog Content Copywriter</h2>
+          <span class="apply-country">New York, United States</span>
         </div>
+        <a class="apply-job" href="#">Apply</a>
+      </div>
+
+      <div class="apply-color apply-color-margin">
+        <div class="apply-column">
+          <h2 class="apply-title">Graphic Designer</h2>
+          <span class="apply-country">New York, United States</span>
+        </div>
+        <a class="apply-job" href="#">Apply</a>
+      </div>
+
+      <div class="apply-color apply-color-margin">
+        <div class="apply-column">
+          <h2 class="apply-title">Fleet Supervisor</h2>
+          <span class="apply-country">Jakarta, Indonesia</span>
+        </div>
+        <a class="apply-job" href="#">Apply</a>
+      </div>
+
+      <div class="apply-color apply-color-margin apply-color-margin-bottom">
+        <div class="apply-column">
+          <h2 class="apply-title">UX Analyst</h2>
+          <span class="apply-country">London, United Kingdom</span>
+        </div>
+        <a class="apply-job" href="#">Apply</a>
       </div>
     </main>
 
